@@ -3,19 +3,26 @@ require 'test_helper'
 class PaysbuyNotificationTest < Test::Unit::TestCase
   include ActiveMerchant::Billing::Integrations
 
-  def setup
-    @paysbuy = Paysbuy::Notification.new(http_raw_data)
-  end
-
-  def test_accessors
-    assert @paysbuy.complete?
-    assert_equal "Completed", @paysbuy.status
+  def test_item_id
+    @paysbuy = Paysbuy::Notification.new("result=00100013")
     assert_equal "100013", @paysbuy.item_id
   end
 
-  private
+  def test_result_completed
+    @paysbuy = Paysbuy::Notification.new("result=00100013")
+    assert @paysbuy.complete?
+    assert_equal "Completed", @paysbuy.status
+  end
 
-  def http_raw_data
-    "result=00100013"
+  def test_result_failed
+    @paysbuy = Paysbuy::Notification.new("result=99100013")
+    assert !@paysbuy.complete?
+    assert_equal "Failed", @paysbuy.status
+  end
+
+  def test_result_pending
+    @paysbuy = Paysbuy::Notification.new("result=02100013")
+    assert !@paysbuy.complete?
+    assert_equal "Pending", @paysbuy.status
   end
 end
